--- a/node/package.json
+++ b/node/package.json
@@ -1,12 +1,16 @@
 {
   "name": "application-name",
-  "version": "0.0.1",
+  "version": "0.0.1-1",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "3.0.1",
     "jade": "*"
+  },
+  "subdomain": "jeffreybiles.numbermaze",
+  "engines": {
+    "node": "0.8.x"
   }
 }
